# RAMP

./: .codespell-ignore  .dockerignore  .envrc  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  README.rst  flake.nix  mypy.ini
.github/: dependabot.yml
.github/workflows/: build.yml
r-epacts/: build.sh  meta.yaml
r-epacts/patches/: 0001-use-default-r-library-directory.patch  0002-do-not-install-tabix.patch
r-saige/: conda_build_config.yaml  meta.yaml
recipes/: conda_build_config.yaml
recipes/bolt-lmm/: build.sh  meta.yaml
recipes/bolt-lmm/patches/: 0001-makefile.patch
recipes/c-blosc2/: build.sh  meta.yaml
recipes/dosage-convertor/: 0002-fix-cmake-libstatgen.patch  build.sh  meta.yaml
recipes/dosage-convertor/patches/: 0001-version.patch
recipes/gcta/: 0001-simu-seed.patch  0002-fix-build-gcc-13.patch  build.sh  meta.yaml
recipes/gwas/: build.sh  meta.yaml
recipes/ldsc/: meta.yaml
recipes/metal/: build.sh  meta.yaml
recipes/pynose/: meta.yaml
recipes/python-blosc2/: 0001-expose-cmake-use-system-blosc2.patch  build.sh  meta.yaml
recipes/qctool/: 0001-fix-build-gcc-13.patch  0002-use-system-libraries.patch  build.sh  meta.yaml
recipes/r-epacts/: meta.yaml
recipes/r-epacts/patches/: 0001-do-not-install-tabix.patch  0002-use-default-r-library-directory.patch
recipes/r-genomicsem/: 0001-make-cluster-rscript-args.patch  meta.yaml
recipes/r-gmmat/: meta.yaml
recipes/r-mathlib/: build.sh  meta.yaml
recipes/r-saige/: meta.yaml
recipes/r-saige/patches/: 0001-use-shared-libs-in-makevars.patch
recipes/raremetal/: 0001-fix-build-gcc-13.patch  0002-fix-rmath.patch  build.sh  meta.yaml
recipes/raremetal-debug/: 0003-debug-print.patch  build.sh  meta.yaml
recipes/raremetal/patches/: 0001-print-brent.patch  0002-print-assoc-stats.patch
recipes/upload/: build.sh  meta.yaml
src/gwas/: MANIFEST.in  pyproject.toml  pytest.ini  setup.py
src/gwas/src/gwas/: __init__.py  _matrix_functions.pyi  _matrix_functions.pyx  _os.pyx  _tri.c  cli.py  command.py  covar.py  defaults.py  eig.py  fastlmm.py  hg19.py  log.py  mean.py  mem.py  ml.py  pheno.py  plink.py  rmw.py  score.py  summary.py  tools.py  tri.py  utils.py  var.py  vcf.py  wkspace.py  z.py
src/gwas/src/gwas/compression/: arr.py  cache.py  convert.py  pipe.py
src/gwas/src/gwas/compression/arr/: _blosc2_get_orthogonal_selection.pyi  _blosc2_get_orthogonal_selection.pyx  _check.hpp  _get.pyi  _get.pyx  _pipe.hpp  _read_float.cpp  _read_float.pyi  _read_str.cpp  _read_str.pyi  _reader.hpp  _ring_buffer.hpp  _write_float.cpp  _write_float.pyi  base.py  bin.py  blosc2.py  parquet.py  text.py
src/gwas/src/gwas/convert/: base.py  cli.py  command.py  worker.py
src/gwas/src/gwas/eig/: base.py  calc.py  collection.py  multiple.py
src/gwas/src/gwas/hdl/: base.py  calc.py  cli.py  command.py  data.py  load.py  minimize.py  ml.py  try_hard.py
src/gwas/src/gwas/mem/: _os.pyi  arr.py  data_frame.py  lim.py  wkspace.py
src/gwas/src/gwas/meta/: alternatives.py  base.py  cli.py  groups.py  index.py  merge.py  prepare.py  resolve.py  rsid_matching.py
src/gwas/src/gwas/meta/worker/: base.py  genomic_sem.py  ldsc.py  legends.py  metal.py  plot.py
src/gwas/src/gwas/null_model/: base.py  calc.py  fastlmm.py  fit.py  ml.py  mlb.py  mpl.py  pml.py  reml.py
src/gwas/src/gwas/plot/: _get.pyi  _get.pyx  cli.py  command.py  get.py  hg19.py  make.py  resolve.py
src/gwas/src/gwas/plots/: cli.py  helpers.py  testing.py  worker.py
src/gwas/src/gwas/raremetalworker/: loco.py  ped.py  score.py  scorefile.py
src/gwas/src/gwas/score/: calc.py  cli.py  command.py  job.py  run.py  worker.py
src/gwas/src/gwas/stratify/: base.py  cli.py  mds.py  populations.py  rename.py  run.py
src/gwas/src/gwas/testing/: convert.py  simulate.py
src/gwas/src/gwas/transpose/: cli.py
src/gwas/src/gwas/tri/: base.py  calc.py  cli.py  tsqr.py  worker.py
src/gwas/src/gwas/upload_score/: cli.py
src/gwas/src/gwas/utils/: download.py  genetics.py  hash.py  jax.py  math.py  multiprocessing.py  numpy.py  shutil.py  threads.py
src/gwas/src/gwas/vcf/: _htslib.pyi  _htslib.pyx  _read.cpp  _read.pyi  base.py  cpp.py  cyvcf2.py  cyvcf2_class.py  cyvcf2_test.py  htslib.py  python.py  variant.py
src/gwas/src/rust/: Cargo.toml
src/gwas/src/rust/src/: lib.rs
src/gwas/tests/: __init__.py  conftest.py  test_arr.py  test_data_frame.py  test_eig.py  test_hdl.py  test_matrix_functions.py  test_mean.py  test_mem.py  test_null_model.py  test_pheno.py  test_score.py  test_tri.py  test_upload_score.py  test_utils.py  test_var.py  test_vcf.py  test_wkspace.py  test_z.py  utils.py
src/gwas/tests/compression/: test_arr.py  test_cache.py  test_pipe.py
src/gwas/tests/meta/: test_index.py  test_rsid.py
src/gwas/tests/score/: conftest.py  rmw_debug.py  simulation.py  test_cli.py  test_ml.py  test_pheno.py  test_plink.py  test_rmw.py  test_score.py  test_worker.py
src/stratify/: pyproject.toml
src/stratify/src/stratify/: __init__.py  base.py  cli.py  log.py  populations.py
