[project]
name = "gwas"
dynamic = ["version"]

requires-python = ">=3.11"

dependencies = [
  "numpy>=1.22",
  "scipy",
  "pandas",
  "matplotlib",
  "seaborn",
  "torch<2",
  "networkx",
  "psutil",
  "threadpoolctl",
  "tqdm",
  "pyyaml",
  "more-itertools",
  "typing_extensions",
]

[project.scripts]
score = "gwas.score.cli:main"
stratify = "gwas.stratify.cli:main"
transpose = "gwas.transpose.cli:main"
tri = "gwas.tri.cli:main"

[build-system]
requires = [
  "cython>=3b1",
  "numpy",
  "setuptools>=62",
  "setuptools-rust>=1.7.0",
  "setuptools_scm[toml]>=6.2",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
test = ["pytest", "pytest-benchmark"]

[tool.ruff]
line-length = 89

[tool.ruff.lint]
select = [
    "F", # pyflakes
    "E", # pycodestyle
    "W", # pycodestyle
    "I", # isort
    "B", # bugbears
    "N", # pep8-naming
    "C90", # McCabe complexity
    "PD", # pandas-vet
    "PTH", # flake8-use-pathlib
]

[tool.pytest.ini_options]
markers = ["slow: marks tests that run much longer than most"]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(funcName)s: %(message)s (%(filename)s:%(lineno)s)"

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
root = "../../"
