[project]
name = "gwas"
dynamic = ["version"]

requires-python = ">=3.12"

dependencies = [
  "numpy>=1.22",
  "scipy",
  "pandas",
  "matplotlib",
  "seaborn",
  "jax",
  "jaxtyping",
  "chex",
  "flatbuffers",
  "psutil",
  "threadpoolctl",
  "tqdm",
  "pyyaml",
  "universal_pathlib",
]

[project.scripts]
benchmark = "gwas.benchmark.cli:main"
convert = "gwas.convert.cli:main"
meta-prepare = "gwas.meta.cli:prepare"
meta-worker = "gwas.meta.cli:worker"
meta-merge = "gwas.meta.cli:merge"
plot = "gwas.plot.cli:main"
score = "gwas.score.cli:main"
stratify = "gwas.stratify.cli:main"
transpose = "gwas.transpose.cli:main"
tri = "gwas.tri.cli:main"
upload-score = "gwas.upload_score.cli:main"

[build-system]
requires = [
  "cython>=3b1",
  "numpy",
  "setuptools>=62",
  "setuptools-rust>=1.7.0",
  "setuptools_scm[toml]>=6.2",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
convert = ["blosc2"]
test = ["pytest", "pytest-benchmark", "more-itertools"]

[tool.ruff]
line-length = 89

[tool.ruff.lint]
select = [
  "F",   # pyflakes
  "E",   # pycodestyle
  "W",   # pycodestyle
  "I",   # isort
  "B",   # bugbears
  "N",   # pep8-naming
  "C90", # McCabe complexity
  "PD",  # pandas-vet
  "PTH", # flake8-use-pathlib
]
ignore = [
  "F722",  # Syntax error in forward annotation
  "PD008", # Use .loc instead of .at. If speed is important, use NumPy.
]

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
root = "../../"
