[project]
name = "stratify"
dynamic = ["version"]

requires-python = ">=3.11"

dependencies = [
  "gwas",
  "matplotlib",
  "numpy",
  "pandas",
  "seaborn",
  "scipy",
]

[project.scripts]
stratify = "stratify.cli:main"

[build-system]
requires = [
  "setuptools>=62",
  "setuptools_scm[toml]>=6.2",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
test = ["pytest", "pytest-benchmark"]

[tool.isort]
profile = "black"

[tool.pylint.format]
max-line-length = "88"

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
root = "../../"
