[package]
name = "gwas-rust"
version = "0.1.0"
authors = ["Lea Waller <lea@lea.science>"]
edition = "2021"
publish = false

# This specifies the MSRV
rust-version = "1.63.0"

[dependencies]
pyo3 = { version = "0.19", features = ["abi3-py37"] }

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[lib]
name = "gwas_rust"
crate-type = ["cdylib"]

[profile.release]
overflow-checks = true
